--- a/CSGOAutistic/CSGOAutistic.vcxproj
+++ b/CSGOAutistic/CSGOAutistic.vcxproj
@@ -152,6 +152,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CSGOAutistic.h" />
+    <ClInclude Include="hooks.h" />
+    <ClInclude Include="index.hpp" />
     <ClInclude Include="Utilities\Scanner.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -160,6 +162,7 @@
   <ItemGroup>
     <ClCompile Include="CSGOAutistic.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="hooks.cpp" />
     <ClCompile Include="Utilities\Scanner.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
