--- a/CSGOAutistic/CSGOAutistic.vcxproj
+++ b/CSGOAutistic/CSGOAutistic.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="CSGOAutistic.h" />
     <ClInclude Include="hooks.h" />
     <ClInclude Include="index.hpp" />
+    <ClInclude Include="interfaces.h" />
     <ClInclude Include="Utilities\Scanner.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
