--- a/CSGOAutistic/CSGOAutistic.vcxproj.filters
+++ b/CSGOAutistic/CSGOAutistic.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="index.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="interfaces.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
