--- a/CSGOAutistic/CSGOAutistic.vcxproj
+++ b/CSGOAutistic/CSGOAutistic.vcxproj
@@ -153,7 +153,7 @@
   <ItemGroup>
     <ClInclude Include="CSGOAutistic.h" />
     <ClInclude Include="hooks.h" />
-    <ClInclude Include="index.hpp" />
+    <ClInclude Include="index.h" />
     <ClInclude Include="interfaces.h" />
     <ClInclude Include="Utilities\Scanner.h" />
     <ClInclude Include="stdafx.h" />
