--- a/CSGOAutistic/CSGOAutistic.vcxproj
+++ b/CSGOAutistic/CSGOAutistic.vcxproj
@@ -152,9 +152,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CSGOAutistic.h" />
+    <ClInclude Include="Features\esp.h" />
+    <ClInclude Include="Features\Components\HealthBar.h" />
     <ClInclude Include="hooks.h" />
+    <ClInclude Include="Features\Components\IRenderable.h" />
     <ClInclude Include="index.h" />
     <ClInclude Include="interfaces.h" />
+    <ClInclude Include="sdk.h" />
+    <ClInclude Include="Utilities\render.h" />
     <ClInclude Include="Utilities\Scanner.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -163,6 +168,8 @@
   <ItemGroup>
     <ClCompile Include="CSGOAutistic.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="Features\esp.cpp" />
+    <ClCompile Include="Features\Components\HealthBar.cpp" />
     <ClCompile Include="hooks.cpp" />
     <ClCompile Include="Utilities\Scanner.cpp" />
     <ClCompile Include="stdafx.cpp">
